k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finch-backend
spec:
  type: ClusterIP
  selector:
    app: finch-backend
  ports:
    - port: 3000
      targetPort: 3000
