k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: finch.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finch-frontend
                port:
                  number: 80
    - host: api.badhnparvej.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finch-backend
                port:
                  number: 3000
